--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,6 @@
-header{
-    background-color: red;
+footer{
+    width:100%;
+    height:100px;
+    background-color: blue;
     text-align: center;
 }
