--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,9 @@
-footer{
-    background-color: blue;
+header{
+    width:100%;
+    height:100px;
+    background-color: red;
+    text-align: center;
+}
+#button{
     text-align: center;
 }
